[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftcdocs-linkcheckdiff"
version = "0.1.0"
description = "A Sphinx builder for checking external links and comparing against a base output"
readme = "README.md"
authors = [{ name = "Uday Vidyadharan", email = "uday@vidyadharan.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sphinx", "linkcheck", "diff"]
dependencies = [
    "sphinx >= 4.0.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest"]


[tool.setuptools.packages.find]
where = ["src"]